# finance-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  REUSE.toml  lint.sh  poetry.lock.license  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pylint.yml  test.yml
app/: __init__.py  config.py  crypt.py  db.py  main.py  models.py  openapi.py
app/accounts/: __init__.py  views.py
app/auth/: __init__.py  exceptions.py  flows.py  models.py  service.py  views.py
app/profiles/: __init__.py  exceptions.py  models.py  service.py  views.py
tests/: conftest.py  defaults.py  test_config.py  test_crypt.py
tests/auth/: test_auth_endpoints.py  test_endpoints.py  test_exceptions.py
tests/profiles/: test_endpoints.py  test_exceptions.py
